===========================================================================
2011-01-08      version 0.16.4
===========================================================================
2011-01-08:	James Osborn
	Added more _qdp functions.
	Fixed bug in creating asqtad links when longlinks==NULL.

2010-05-24:	James Osborn
	Made scalars in solvers be double precision.

===========================================================================
2010-03-26      version 0.16.3
===========================================================================
2010-03-26:	James Osborn
	Fix even/odd reconstruction.

2010-03-26:	Saul Cohen
	Fixed even/odd preconditioning for DW inverter.

===========================================================================
2010-03-19      version 0.16.2
===========================================================================
2010-03-19:	James Osborn
	Benchmarks now average performance over all nodes.

2010-03-19:	Saul Cohen
	Fixed DW inverter.

===========================================================================
2010-02-21      version 0.16.1
===========================================================================
2010-02-18:	James Osborn
	Added checks for breakdown in BiCGStab inverter.

2010-02-18:	James Osborn
	Fixed bugs in DW inverter.  Added default initializers for invert
 	and resid args.

2010-02-17:     Saul Cohen
        Restructured domain-wall functions to eliminate some problems with
        uninitialized temporaries.

===========================================================================
2010-01-24      version 0.16.0
===========================================================================
2010-01-24:     Carleton DeTar
        Add support for Fermilab relative norm stopping criterion 
        for CG and BiCG.  Adds two new members to QOP_resid_arg_t.

===========================================================================
2009-09-11      version 0.15.0