@@ -6,6 +6,7 @@
 extern void QOPPC(su3det)(QDP_ColorMatrix *mat,QDP_Complex *det);
 extern void QOPPC(su3inverse)(QDP_ColorMatrix *mat,QDP_ColorMatrix *inv);
 extern void QOPPC(su3reunit)(QDP_ColorMatrix *U,QDP_ColorMatrix *Ur);
+extern void QOPPC(u3reunit)(QDP_ColorMatrix *U,QDP_ColorMatrix *Ur);
 
 
 //create HISQ links from QOPPC(GaugeField)
@@ -53,8 +54,11 @@ QOPPC(hisq_create_L_from_G)(QOP_info_t *info,
   TRACE;
   // projection stage 
   // project gauge fields to SU3 
+  // JCO - need to REMOVE PHASES FIRST!!!
+  // JCO - just use U3 for now
   for(int i=0; i<4; i++) {
-    QOPPC(su3reunit)(Vgauge[i], Wgauge[i]);
+    //QOPPC(su3reunit)(Vgauge[i], Wgauge[i]);
+    QOPPC(u3reunit)(Vgauge[i], Wgauge[i]);
   }
 
   TRACE;
