@@ -1,3 +1,6 @@
+2011-02-23:	James Osborn
+	Changed HISQ reunit to U3 since phases aren't known.
+
 ===========================================================================
 2011-01-08      version 0.16.4
 ===========================================================================
